--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -1,19 +1,19 @@
 <mat-card class="shipping-card">
 
   <!-- Dashboard Title -->
-  
+
 
   <mat-card-content *ngIf="!selectedUser">
     <mat-card-header>
       <mat-card-title>Usuarios</mat-card-title>
     </mat-card-header>
-    <mat-list >
+    <mat-list>
       <mat-list-item *ngFor="let user of users">
         {{ user.nombre }} {{ user.apellido }} {{ user.email }} {{ user.direccion }}
-            <button mat-mini-fab color="accent" (click)="updateUser(user)" class="btn-actualizar"><i
-                class="fa-solid fa-pen"></i></button>
-            <button mat-mini-fab color="warn" (click)="deleteUser(user.id)" aria-label="Eliminar usuario"
-              class="btn-eliminar"><i class="fa-solid fa-trash"></i></button>
+        <button mat-mini-fab color="accent" (click)="updateUser(user)" class="btn-actualizar"><i
+            class="fa-solid fa-pen"></i></button>
+        <button mat-mini-fab color="warn" (click)="deleteUser(user.id)" aria-label="Eliminar usuario"
+          class="btn-eliminar"><i class="fa-solid fa-trash"></i></button>
       </mat-list-item>
     </mat-list>
   </mat-card-content>
@@ -21,6 +21,7 @@
 
   <mat-card-header *ngIf="selectedUser">
     <mat-card-title>Editar Usuario</mat-card-title>
+
   </mat-card-header>
   <mat-card-content id="formUpdate">
     <div *ngIf="selectedUser" class="edit-user-section">
@@ -54,8 +55,14 @@
         </mat-form-field>
       </div>
 
-      <button mat-raised-button color="accent" (click)="saveChanges()">Guardar</button>
-      <button mat-raised-button (click)="cancelUpdate()">Cancelar</button>
+      <div class="row">
+        <mat-slide-toggle mat-mini-fab color="accent" [(ngModel)]="selectedUser.active">Activo</mat-slide-toggle>
+      </div>
+
+      <mat-card-actions>
+        <button mat-raised-button color="accent" (click)="saveChanges()" class="mr-2">Guardar</button>
+        <button mat-raised-button (click)="cancelUpdate()">Cancelar</button>
+      </mat-card-actions>
     </div>
   </mat-card-content>
 </mat-card>
