--- a/src/app/components/user/user-list/user-list.component.html
+++ b/src/app/components/user/user-list/user-list.component.html
@@ -59,10 +59,10 @@
         <mat-slide-toggle mat-mini-fab color="accent" [(ngModel)]="selectedUser.active">Activo</mat-slide-toggle>
       </div>
 
-      <mat-card-actions>
+      <mat-action-list>
         <button mat-raised-button color="accent" (click)="saveChanges()" class="mr-2">Guardar</button>
         <button mat-raised-button (click)="cancelUpdate()">Cancelar</button>
-      </mat-card-actions>
+      </mat-action-list>
     </div>
   </mat-card-content>
 </mat-card>
