validaciones en crear usuario

--- a/src/app/components/account/forgot-password/forgot-password.component.html
+++ b/src/app/components/account/forgot-password/forgot-password.component.html
@@ -1,6 +1,6 @@
 <mat-card class="shipping-card">
     <mat-card-header>
-      <mat-card-title>Cambiar Email</mat-card-title>
+      <mat-card-title>Ingrese su Email</mat-card-title>
     </mat-card-header>
     <mat-card-content>
       <form (ngSubmit)="onSubmit()">
