Antes de posible error

--- a/src/app/components/dashboard-navigation/dashboard-navigation.component.html
+++ b/src/app/components/dashboard-navigation/dashboard-navigation.component.html
@@ -66,6 +66,6 @@
     <app-user-create *ngIf="showUserAdd"></app-user-create>
     <app-change-password *ngIf="showChangePassword"></app-change-password>
     <app-profile *ngIf="showProfile"></app-profile>
-    <app-footer></app-footer>
+   <!--  <app-footer></app-footer> -->
   </mat-sidenav-content>
 </mat-sidenav-container>
