--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,22 +1,13 @@
 <header class="masthead">
-  <!-- Navigation-->
-  <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-    <div class="container">
-      <div class="navbar-collapse" id="navbarResponsive">
-        <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0 ">
-          <li class="nav-item ml-auto">
-            <a class="nav-link" routerLink="/login">Login</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
+  <div class="position-absolute top-0 end-0 mt-3 me-3 d-block ">
+      <a class="btn btn-success" routerLink="/login">Login</a>
+  </div>
   <div class="container">
-    <div class="masthead-subheading">Bienvenido!</div>
-    <div class="masthead-heading text-uppercase">Reserva tu turno</div>
-    <button mat-fab extended routerLink="/create-turn" aria-label="Crear turno">
-      <mat-icon>event</mat-icon>
-      Turno Online</button>
+      <div class="masthead-subheading">Bienvenido!</div>
+      <div class="masthead-heading text-uppercase">Reserva tu turno</div>
+      <button mat-fab extended routerLink="/create-turn" aria-label="Crear turno">
+          <mat-icon>event</mat-icon>
+          Turno Online
+      </button>
   </div>
 </header>
